--- a/Index.html
+++ b/Index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend mentor </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/style.css">
 </head>
 <body class="bg-blue-200">
     <div class="w-96 mx-auto mt-20 h-full b">
-        <img class="rounded-t-2xl" src="images/illustration-hero.svg" alt="">
+        <img class="rounded-t-2xl" src="/public/images/illustration-hero.svg" alt="">
 
         <div class="bg-white h-full rounded-b-2xl">
             <div class="text-black font-bold text-2xl pt-8 text-center">
@@ -22,7 +22,7 @@
 
             <div class="mx-10 mt-5 bg-gray-100 rounded-xl p-5 flex  ">
                 <div class="flex flex-row ">
-                    <img src="images/icon-music.svg" alt="">
+                    <img src="/public/images/icon-music.svg" alt="">
                     <div class=" pl-5 text-black  tracking-tighter">
                         <h1 class="font-bold">Annual Plan</h1>
                         <p class="text-gray-400 font-normal">$59.99/year</p>
